--- a/quiz/index.html
+++ b/quiz/index.html
@@ -117,7 +117,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://eliminadornascostas.site/"
+      location.href = "https://felizdenovo.club/"
     }
   </script>
 </body>
