--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <vsl>
 <div id="vid_637a3b63f28d2a000abd566f" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_637a3b63f28d2a000abd566f" src="https://images.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637a3b63f28d2a000abd566f/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637a3b63f28d2a000abd566f" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637a3b63f28d2a000abd566f">var s=document.createElement("script");s.src="https://scripts.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637a3b63f28d2a000abd566f/player.js",s.async=!0,document.head.appendChild(s);</script>
 <div id="cta1" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/n7cg4rO" class="a-btn" style="text-decoration: none;">
+<a href="https://pay.kiwify.com.br/vFKUP5y" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO OBTER ACESSO!</span>
 <span class="span-btn2">(atenção: poucas vagas disponiveis)</span>
 </a>
@@ -404,7 +404,7 @@ volto para dar meu resultado 🤭 </td>
 </div>
 
 <div id="cta2" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/n7cg4rO" class="a-btn" style="text-decoration: none;">
+<a href="https://pay.kiwify.com.br/vFKUP5y" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO MUDAR DE VIDA!</span>
 <span class="span-btn2">(atenção: vagas limitadas)</span>
 </a>
