--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="vid_637d276bf44ca1000986d67d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_637d276bf44ca1000986d67d" src="https://images.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637d276bf44ca1000986d67d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637d276bf44ca1000986d67d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637d276bf44ca1000986d67d">var s=document.createElement("script");s.src="https://scripts.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637d276bf44ca1000986d67d/player.js",s.async=!0,document.head.appendChild(s);</script>
 
 <div id="cta1" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/3UhX6Z3" class="a-btn" style="text-decoration: none;">
+<a href="https://pay.kiwify.com.br/QoNO7Ey" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO OBTER ACESSO!</span>
 <span class="span-btn2">(atenção: vagas limitadas)</span>
 </a>
