--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
-<h3 class="my-4"><b>Simples Vitamina de 3 Ingredientes que deixa seu cabelo liso e hidratado. Tecnica indiana</b></h3>
+<h3 class="my-4"><b> Vitamina de 3 Ingredientes que deixa seu cabelo liso e hidratado em 1 dia</b></h3>
 
 <div id="vid_637d276bf44ca1000986d67d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_637d276bf44ca1000986d67d" src="https://images.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637d276bf44ca1000986d67d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637d276bf44ca1000986d67d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637d276bf44ca1000986d67d">var s=document.createElement("script");s.src="https://scripts.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637d276bf44ca1000986d67d/player.js",s.async=!0,document.head.appendChild(s);</script>
 
