--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
 <h1>
-Descubra o&nbsp;<span style="color:#a8dadc">Real Motivo</span>&nbsp;de&nbsp;<span style="color:#a8dadc">99%</span>&nbsp;Dos Cremes Anti-Rugas&nbsp;<span style="color:#a8dadc">Não Funcionam</span>
+Como eliminar &nbsp;<span style="color:#a8dadc">as rugas com</span>&nbsp;de&nbsp;<span style="color:#a8dadc">uma mistura </span>&nbsp;de caramelo americana&nbsp;<span style="color:#a8dadc">100% natural</span>
 </h1>
 <vsl>
 <div id="vid_637a3b63f28d2a000abd566f" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_637a3b63f28d2a000abd566f" src="https://images.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637a3b63f28d2a000abd566f/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637a3b63f28d2a000abd566f" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637a3b63f28d2a000abd566f">var s=document.createElement("script");s.src="https://scripts.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637a3b63f28d2a000abd566f/player.js",s.async=!0,document.head.appendChild(s);</script>
