--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </script>
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=1085062975511147&ev=PageView&noscript=1"
-/></noscript>
+</noscript>
 <!-- End Meta Pixel Code -->
       
 </script>
