--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Dosis:wght@200;300;400;500;600;700;800&family=Oswald:wght@200;300;400;500;600;700&family=Signika:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./assets/css/com.css">
 
-<title>Metodo rugas nunca mais</title>
+<title>Articulações de Aço</title>
 <style type="text/css">
       header {
         color: white;
@@ -61,11 +61,10 @@
 <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
 <h1>
-Como eliminar &nbsp;<span style="color:#a8dadc">as rugas com</span>&nbsp;uma&nbsp;<span style="color:#a8dadc"> mistura </span>&nbsp;de caramelo americana&nbsp;<span style="color:#a8dadc">100% natural</span>
+ESSE TRUQUE DE 60 &nbsp;<span style="color:#a8dadc">SEGUNDOS</span>&nbsp;uma&nbsp;<span style="color:#a8dadc">ALIVIA DORES</span>&nbsp;ARTICULARES&nbsp;<span style="color:#a8dadc">SEM MEDICAMENTOS OU EFEITOS COLATERAIS</span>
 </h1>
 <vsl>
-<div id="vid_637a3b63f28d2a000abd566f" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_637a3b63f28d2a000abd566f" src="https://images.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637a3b63f28d2a000abd566f/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637a3b63f28d2a000abd566f" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637a3b63f28d2a000abd566f">var s=document.createElement("script");s.src="https://scripts.converteai.net/65a3ee66-3258-4e3e-9524-9ef80ca7d19f/players/637a3b63f28d2a000abd566f/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+<div id="vid_638b5a79748171000a6a1ed4" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_638b5a79748171000a6a1ed4" src="https://images.converteai.net/0aade41b-5fd4-4ff0-81d9-c13501ef8dc7/players/638b5a79748171000a6a1ed4/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_638b5a79748171000a6a1ed4" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_638b5a79748171000a6a1ed4">var s=document.createElement("script");s.src="https://scripts.converteai.net/0aade41b-5fd4-4ff0-81d9-c13501ef8dc7/players/638b5a79748171000a6a1ed4/player.js",s.async=!0,document.head.appendChild(s);</script>
 <div id="cta1" class="mt-4 d-none">
 <span class="span-btn">QUERO OBTER ACESSO!</span>
 <span class="span-btn2">(atenção: poucas vagas disponiveis)</span>
