--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ volto para dar meu resultado 🤭 </td>
 </div>
 
 <div id="cta2" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/vFKUP5y" class="a-btn" style="text-decoration: none;">
+<a href="https://pay.kiwify.com.br/nNDEJhx" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO MUDAR DE VIDA!</span>
 <span class="span-btn2">(atenção: vagas limitadas)</span>
 </a>
