--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ volto para dar meu resultado 🤭 </td>
 </td>
 </tr>
 <tr>
-<td class="fb-comments-comment-text">Melhor escolha da minha vida, meu rosto está lisinho agora estou amando os resultados.</td>
+<td class="fb-comments-comment-text">Melhor escolha da minha vida,  estou amando os resultados.</td>
 </tr>
 <tr>
 <td class="fb-comments-comment-actions">
@@ -149,7 +149,7 @@ volto para dar meu resultado 🤭 </td>
 </td>
 </tr>
 <tr>
-<td class="fb-comments-comment-text">Esse vídeo mudou minha vida, meu rosto era cheio de linhas de expressão e rugasagora ta 100%,  minha qualidade de vida e minha autoestima está lá nas alturas haha.</td>
+<td class="fb-comments-comment-text">Esse vídeo mudou minha vidaminha autoestima está lá nas alturas haha.</td>
 </tr>
 <tr>
 <td class="fb-comments-comment-actions">
@@ -371,7 +371,7 @@ volto para dar meu resultado 🤭 </td>
 </td>
 </tr>
 <tr>
-<td class="fb-comments-comment-text">Em duas semanas comecei a ver resultados, muito bom</td>
+<td class="fb-comments-comment-text">Em uma semanas comecei a ver resultados, muito bom</td>
 </tr>
 <tr>
 <td class="fb-comments-comment-actions">
