--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Dosis:wght@200;300;400;500;600;700;800&family=Oswald:wght@200;300;400;500;600;700&family=Signika:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./assets/css/com.css">
 
-<title>Protocolo anti gordura</title>
+<title>CONFIENCIAL</title>
 <style type="text/css">
       header {
         color: white;
@@ -40,11 +40,10 @@ PIXEL FB
 
 <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
-<h3 class="my-4"><b>Simples mistura de 2 Ingredientes removedora Manchas do rosto e Corpo</b></h3>
+<h3 class="my-4"><b>Simples planta irlandesa feita com Ingredientes comuns elimina as celulites em 21 dias</b></h3>
 <vsl>
-<div id="vid_6330c013010c54000a77937e" style="position:relative;width:100%;padding: 56.74157303370787% 0 0;"><img id="thumb_6330c013010c54000a77937e" src="https://images.converteai.net/ae0d808a-b95f-40fb-81e3-490a1db02d40/players/6330c013010c54000a77937e/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6330c013010c54000a77937e" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6330c013010c54000a77937e">var s=document.createElement("script");s.src="https://scripts.converteai.net/ae0d808a-b95f-40fb-81e3-490a1db02d40/players/6330c013010c54000a77937e/player.js",s.async=!0,document.head.appendChild(s);</script>
-<div id="cta1" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/PlzJo7p" class="a-btn" style="text-decoration: none;">
+<div id="vid_638faf27a0f40c000ab5ab1b" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_638faf27a0f40c000ab5ab1b" src="https://images.converteai.net/0aade41b-5fd4-4ff0-81d9-c13501ef8dc7/players/638faf27a0f40c000ab5ab1b/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_638faf27a0f40c000ab5ab1b" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_638faf27a0f40c000ab5ab1b">var s=document.createElement("script");s.src="https://scripts.converteai.net/0aade41b-5fd4-4ff0-81d9-c13501ef8dc7/players/638faf27a0f40c000ab5ab1b/player.js",s.async=!0,document.head.appendChild(s);</script><div id="cta1" class="mt-4 d-none">
+<a href="https://pay.kiwify.com.br/pC6Of0M" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO OBTER ACESSO!</span>
 <span class="span-btn2">(atenção: poucas vagas disponiveis)</span>
 </a>
@@ -399,7 +398,7 @@ Amei!</td>
 </div>
 
 <div id="cta2" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/PlzJo7p" class="a-btn" style="text-decoration: none;">
+<a href="https://pay.kiwify.com.br/pC6Of0M" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO MUDAR DE VIDA!</span>
 <span class="span-btn2">(atenção: vagas limitadas)</span>
 </a>
