--- a/ps/index.html
+++ b/ps/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="style.css">
-<title>Tudo Pronto!</title>
+<title>tudo certo!</title>
 
 <<!-- Meta Pixel Code -->
 <script>
@@ -30,7 +30,7 @@ fbq('track', 'AddToCart');
 <div>
 <div class="question">
 <h1>Tudo Pronto!</h1>
-<p>Clique no botão abaixo para continuar</p>
+<p>o video a seguir, é uma forma de mostrar mais imformações veja enquanto a tempo</p>
 </div>
 <div class="answer">
 <a class="btn" href="https://felizdenovo.club/">CONTINUAR</a>
