--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
-<h3 class="my-4"><b>Simples planta irlandesa feita com Ingredientes comuns elimina as celulites em 21 dias</b></h3>
+<h3 class="my-4"><b>Simples bebida irlandesa feita com Ingredientes comuns elimina as celulites em 21 dias</b></h3>
 <vsl>
 <div id="vid_638faf27a0f40c000ab5ab1b" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_638faf27a0f40c000ab5ab1b" src="https://images.converteai.net/0aade41b-5fd4-4ff0-81d9-c13501ef8dc7/players/638faf27a0f40c000ab5ab1b/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_638faf27a0f40c000ab5ab1b" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_638faf27a0f40c000ab5ab1b">var s=document.createElement("script");s.src="https://scripts.converteai.net/0aade41b-5fd4-4ff0-81d9-c13501ef8dc7/players/638faf27a0f40c000ab5ab1b/player.js",s.async=!0,document.head.appendChild(s);</script><div id="cta1" class="mt-4 d-none">
 <a href="https://pay.kiwify.com.br/pC6Of0M" class="a-btn" style="text-decoration: none;">
