--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 </td>
 </tr>
 <tr>
-<td class="fb-comments-comment-text">Estou feliz, a 7 meses atrás eu estava com 78kg e hoje estou com 54kg até postei a respeito no meu perfil aqui no face o antes e depois 😘😘😘</td>
+<td class="fb-comments-comment-text">Estou feliz, até postei a respeito no meu perfil aqui no face o antes e depois 😘😘😘</td>
 </tr>
 <tr>
 <td class="fb-comments-comment-actions">
@@ -225,7 +225,7 @@
 </td>
 </tr>
 <tr>
-<td class="fb-comments-comment-text">Quando engravidei ja estava acima do meu peso e engordei mais 20kg, todos diziam que eu nunca mais iria emagrecer. Quando tive a minha bebê eu continue bem acima do peso mas decidi que iria mudar, que iria mostrar pra todo mundo que é possível sim emagrecer. Hoje com essas vitaminas ja perdi 24kg, estou mais magra do que estava antes de engravidar e aos 32 anos e poucos estou recuperando minha auto estima. 🥰</td>
+<td class="fb-comments-comment-text">  Hoje  estou recuperando minha auto estima. 🥰</td>
 </tr>
 <tr>
 <td class="fb-comments-comment-actions">
