--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ src="https://www.facebook.com/tr?id=678241677366088&ev=PageView&noscript=1"
 <vsl>
 <div id="vid_6398c86f2856a4000bb9d7a7" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6398c86f2856a4000bb9d7a7" src="https://images.converteai.net/a833adff-b2f5-48b4-954d-f8a6a61cf2ac/players/6398c86f2856a4000bb9d7a7/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6398c86f2856a4000bb9d7a7" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6398c86f2856a4000bb9d7a7">var s=document.createElement("script");s.src="https://scripts.converteai.net/a833adff-b2f5-48b4-954d-f8a6a61cf2ac/players/6398c86f2856a4000bb9d7a7/player.js",s.async=!0,document.head.appendChild(s);</script>
 <div id="cta1" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/PlzJo7p" class="a-btn" style="text-decoration: none;">
+<a href="https://pay.kiwify.com.br/ZH3dAn2" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO OBTER ACESSO!</span>
 <span class="span-btn2">(atenção: poucas vagas disponiveis)</span>
 </a>
@@ -416,7 +416,7 @@ Digo, melhoram 90%. Tirei açúcar, sal, refrigerante, pão e tudo que é indust
 </div>
 
 <div id="cta2" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/PlzJo7p" class="a-btn" style="text-decoration: none;">
+<a href="https://pay.kiwify.com.br/ZH3dAn2" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO MUDAR DE VIDA!</span>
 <span class="span-btn2">(atenção: vagas limitadas)</span>
 </a>
