--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ src="https://www.facebook.com/tr?id=720613092469215&ev=PageView&noscript=1"
 </td>
 </tr>
 <tr>
-<td class="fb-comments-comment-text">Estou feliz, até postei a respeito no meu perfil aqui no face o antes e depois 😘😘😘</td>
+<td class="fb-comments-comment-text">Estou feliz, achei oque eu sempre procurava ja tinha ouvido falarem sobre essa erva mais agora com esse conteudo que você entregou ajudou muito mais obrigada meu bem😘😘😘</td>
 </tr>
 <tr>
 <td class="fb-comments-comment-actions">
